# hsm

./: .env.example  .gitignore  README.md  VLMUNR_INTEGRATION.md  cli.py  environment.yml  gen.sh  pyproject.toml  render.py  render_config.py  render_shell.py  run.sh  scene_variants.py  vlmunr_bpa.py  vlmunr_cli.py  vlmunr_config.py  vlmunr_render.py  vlmunr_shell.py  vlmunr_variants.py
configs/scene/: scene_config.yaml
docs/: index.html
hsm_core/: config.py
hsm_core/retrieval/core/: adaptive_retrieval.py  main.py  retrieval_logic.py
hsm_core/scene/setup/: setup.py
hsm_core/scene/specifications/: scene_spec.py
hsm_core/utils/: logging.py
hsm_core/vlm/: gpt.py  vlm.py
tests/: test_render_integration.py  test_vlmunr_integration.py
